@@ -406,7 +406,11 @@ extern GC_warn_proc GC_current_warn_proc;
 #                 define GC_GETSECTBYNAME getsectbynamefromheader_64
 #               endif
 #	else
-#		error define GC_THREAD_STATE_T
+#		if defined(ARM32)
+#		  define GC_THREAD_STATE_T arm_thread_state_t
+#		else
+#		  error define GC_THREAD_STATE_T
+#		endif
 #		define GC_MACH_THREAD_STATE MACHINE_THREAD_STATE
 #		define GC_MACH_THREAD_STATE_COUNT MACHINE_THREAD_STATE_COUNT
 #	endif
